Changed implementation to use ContentProvider. (All db operation is done using ContentProvider) Added support for delete. Moved db update operations to the service. Refactored to simply fragments.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,12 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <!-- Provider for downloads, downloaded and downloading content. -->
+        <provider
+            android:name="com.milanix.example.downloader.data.provider.DownloadContentProvider"
+            android:authorities="com.milanix.example.downloader.data.provider.DownloadContentProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
