--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme" >
+        android:theme="@style/DownloaderTheme" >
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
 
+        <!-- Service for download tasks -->
         <service
             android:name="com.milanix.example.downloader.service.DownloadService"
             android:enabled="true"
