--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -41,6 +42,11 @@
             android:name="com.milanix.example.downloader.data.provider.DownloadContentProvider"
             android:authorities="com.milanix.example.downloader.data.provider.DownloadContentProvider"
             android:exported="false" />
+
+        <!-- Broadcast receiver for actions to be provided in the service -->
+        <receiver
+            android:name="com.milanix.example.downloader.service.DownloadService$ServiceActionReceiver"
+            android:enabled="true" />
     </application>
 
 </manifest>
