--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,12 @@
         <!-- Broadcast receiver for actions to be provided in the service -->
         <receiver
             android:name="com.milanix.example.downloader.service.DownloadService$ServiceActionReceiver"
-            android:enabled="true" />
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="com.milanix.example.downloader.service.DownloadService.ACTION_CANCEL" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
