--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/DownloaderTheme" >
         <activity
-            android:name=".HomeActivity"
+            android:name="com.milanix.example.downloader.activity.HomeActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
 
